--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="http://media.purefishing.com/i/penn/Berkley_Fusion19_EWG_Treble_Hooks_Chartreuse_6_2020_alt1?w=500&h=500&img404=404&v=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
